--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "angular": "~1.4.5",
+    "angular-bootstrap": "~0.13.4",
     "angular-resource": "~1.4.5",
     "angular-route": "~1.4.5",
     "bootstrap": "~3.3.5",
