--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
+    "figaro": "^0.1.9",
     "mongodb": "^2.0.43",
     "mongojs": "^1.3.0",
     "mongoose": "^4.1.7"
